# thetask

./: CMakeLists.txt  readme.md
client/: CMakeLists.txt
client/include/: client.hpp  control.hpp
client/src/: client.cpp  control.cpp
client1/: CMakeLists.txt  main.cpp
client2/: CMakeLists.txt  main.cpp
